--- a/css/slider.css
+++ b/css/slider.css
@@ -68,10 +68,10 @@
     background-size: cover;
   }
   .carousel .one {
-    background-image: url("../images/cover_bg_4.jpg");
+    background-image: url("../images/outreach6.jpeg");
   }
   .carousel .two {
-    background-image: url("../images/hero.png");
+    background-image: url("../images/hero1.jpeg");
   }
   /* .carousel .three {
     background-image: url(https://cdn.pixabay.com/photo/2016/08/09/21/54/lake-1581879__340.jpg);
