--- a/css/slider.css
+++ b/css/slider.css
@@ -24,6 +24,7 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    white-space: nowrap;
   }
   .carousel h1 {
     text-align: center;
@@ -64,8 +65,9 @@
   .carousel .three,
   .carousel .four,
   .carousel .five {
-    background-position: center center;
-    background-size: cover;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
   .carousel .one {
     background-image: url("../images/outreach6.jpeg");
